[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0"]

[project]
name = "script-it"
dynamic = ["version"]
description = "Python utilities for writing interactive terminal applications"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.optional-dependencies]

## Dev Extra Sets ##

dev = [
    "pytest>=6",
    "pytest-cov>=2.10.1",
    "pre-commit>=3.0.4,<4.0",
    "ruff==0.2.0",
    "setuptools>=60",
    "setuptools-scm>=8.0"
]

[project.urls]
Source = "https://github.com/IBM/scriptit"

[tool.setuptools.packages.find]
where = ""
include = ["scriptit"]

[tool.setuptools_scm]
write_to = "scriptit/_version.py"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E", "F", "UP", "B", "SIM", "I"
]
ignore = [
    "UP032", # f-string
    "UP034", # extraneous-parentheses
    "F403", # unable to detect undefined names
    "I001", # import block unsorted/unformatted
    "E402", # module level import not at top of file
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401", # imported but unused
    "F403" # unable to detect undefined names
]
